fixes tooltip overlap

--- a/surveys/2018/website/src/stylesheets/_pagetitle.scss
+++ b/surveys/2018/website/src/stylesheets/_pagetitle.scss
@@ -2,6 +2,9 @@
     border-top: 1px solid $dark-border-color;
     border-bottom: 1px solid $dark-border-color;
 
+    // Fixes overlap with <Tooltip />
+    z-index: 0;
+
     // background: $light-bg-color;
 }
 
